# The-Mountains

./: .gitignore
The-Mountains_Client/: Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj
The-Mountains_Client/Assets/Materials/: NoiseBurn.mat
The-Mountains_Client/Assets/Prefabs/: RoomPlayer.prefab  ScenesManager.prefab
The-Mountains_Client/Assets/Prefabs/Card/: Card.prefab  Cardback.prefab  Cardfront.prefab
The-Mountains_Client/Assets/Prefabs/Tip/: Tip.prefab
The-Mountains_Client/Assets/Scenes/: Game.unity  IPEdit.unity  Login.unity
The-Mountains_Client/Assets/Scripts/: MonoSingle.cs  Prototest.cs  ScenesManager.cs  Test2.cs  TestManager.cs
The-Mountains_Client/Assets/Scripts/Info/: DebugManager.cs  FormatDetecter.cs  Player.cs  PlayerManager.cs  RoomPlayer.cs
The-Mountains_Client/Assets/Shaders/: NoiseBurn.shader
The-Mountains_Client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
The-Mountains_Server/: CMakeLists.txt  Login.pb.cc  Login.pb.h  README.md  The_Mountains_Server  main.cpp
The-Mountains_Server/Applications/: GameContent.cpp  GameContent.h  GameRoom.cpp  GameRoom.h  GameServer.h  GameSession.cpp  GameSession.h  LoginServer.cpp  LoginServer.h  LoginSession.cpp  LoginSession.h
The-Mountains_Server/MsgProtocol/: Game.pb.cc  Game.pb.h  GameContent.pb.cc  GameContent.pb.h  Login.pb.cc  Login.pb.h
The-Mountains_Server/ProtoFile/: Game.proto  GameContent.proto  Login.proto
The-Mountains_Server/Services/AsyncServices/: AsyncServer.cpp  AsyncServer.h  AsyncSession.cpp  AsyncSession.h  HeartBeats.cpp  HeartBeats.h
The-Mountains_Server/Services/DBServices/: DatabaseService.cpp  DatabaseService.h
The-Mountains_Server/Services/LogServices/: LogServices.cpp  LogServices.h
The-Mountains_Server/Services/TimeServices/: TimeService.h
(+34 files in other folders)
